about overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,7 @@
     margin-right: 0;
     width: 35px;
     height: 35px;
-    background: url('../img-new/logo_12.png') center center no-repeat;
+    background: url('../img/logo/logo_12.png') center center no-repeat;
     background-size: contain;
   }
 
